--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <script src="./third_party/esri-leaflet.js"></script>
 
     <!-- Cesium and our UI are pulled in via RequireJS.  Our plugins are pulled in indirectly. -->
-    <link rel="stylesheet" href="viewer/CesiumViewer.css" media="screen">
+    <link rel="stylesheet" href="cesium/Source/Widgets/widgets.css" media="screen">
     <link rel="stylesheet" href="viewer/AusGlobeViewer.css">
     <script src="RequireJSConfig.js"></script>
     <script data-main="ui/main" src="cesium/ThirdParty/requirejs-2.1.9/require.js"></script>
