--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="description" content="AusGlobe">
     <meta name="copyright" content="Copyright(c) 2012-2013 National ICT Australia Limited (NICTA).  All rights reserved.">
     <title>AusGlobe</title>
-    
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
     <!-- jQuery -->
     <script src="./third_party/jquery-1.8.3.min.js"></script>
     <link rel="stylesheet" href="./third_party/jquery-ui-1.9.2.custom/css/smoothness/jquery-ui-1.9.2.custom.min.css" />
