--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">  <!-- Use Chrome Frame in IE -->
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <meta name="description" content="AusGlobe">
+    <meta name="description" content="NationalMap">
     <meta name="copyright" content="Copyright(c) 2012-2013 National ICT Australia Limited (NICTA).  All rights reserved.">
-    <title>AusGlobe</title>
+    <title>National Map</title>
     
     <!-- jQuery -->
     <script src="./third_party/jquery-1.8.3.min.js"></script>
