initial printing and share capability for 2d and 3d

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
     <script src="./third_party/bing.js"></script>
     <script src="./third_party/esri-leaflet.js"></script>
+    <script src="./third_party/html2canvas.js"></script>
 
     <link rel="stylesheet" href="cesium/Source/Widgets/widgets.css" media="screen">
     <link rel="stylesheet" href="viewer/AusGlobeViewer.css">
