--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
 
     <div id="cesiumContainer"></div>
     <div id="loadingIndicator" class="loadingIndicator"></div>
+    <div id="printScreen" class="printScreen" style="display: none;"></div>
 
     <script src="build/ausglobe.js"></script>
 </body>
