--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <script src="./third_party/esri-leaflet.js"></script>
     <script src="./third_party/html2canvas.js"></script>
 
-    <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-image/v0.0.3/leaflet-image.js'></script>
+    <!-- <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-image/v0.0.3/leaflet-image.js'></script>  -->
 
     <link rel="stylesheet" href="cesium/Source/Widgets/widgets.css" media="screen">
     <link rel="stylesheet" href="viewer/AusGlobeViewer.css">
