print moved to browser via styles

--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,10 @@
     <script src="cesium/Build/Cesium/Cesium.js"></script>
 </head>
 
-<body style="background: #000;">
+<body>
 
-    <div id="cesiumContainer"></div>
+    <div id="cesiumContainer" class="fullWindow"></div>
     <div id="loadingIndicator" class="loadingIndicator"></div>
-    <div id="printScreen" class="printScreen" style="display: none;"></div>
 
     <script src="build/ausglobe.js"></script>
 </body>
