--- a/public/home.html
+++ b/public/home.html
@@ -11,84 +11,192 @@ body,td,th {
 	color: #414141;
 }
 body {
-	margin-left: 50px;
+	margin-left: 0px;
 	margin-top: 0px;
-	margin-right: 50px;
+	margin-right: 0px;
 	margin-bottom: 0px;
+}
+.header {
+	background-color: #4C4C4C;
+	height: 100px;
+	width: 100%;
+	padding-top: 40px;
+	padding-left: 40px;
+	position: fixed;
+	top: 0px;
+	color: #E5E5E5;
+	background-image: url(globe_img.png);
+	background-position: 100% 0%;
+	background-repeat: no-repeat;
+}
+.information {
+	padding: 50px;
+	margin-top: 120px;
+}
+.footer {
+	background-color: #4c4c4c;
+	padding-top: 40px;
+	padding-right: 40px;
+	padding-left: 40px;
+	padding-bottom: 40px;
+	height: 100px;
+	width: 100%;
+	color: #D6D6D6;
+}
+a:link {
+	color: #DC7F00;
+	text-decoration: none;
+}
+a {
+	font-weight: bold;
+}
+a:visited {
+	text-decoration: none;
+	color: #DC7F00;
+}
+a:hover {
+	text-decoration: none;
+	color: #FF9607;
+}
+a:active {
+	text-decoration: none;
+	color: #DC7F00;
+	padding-left: 40px;
 }
 </style>
 </head>
 
 <body>
-<p><em>[branded header]</em></p>
-<p>&nbsp;</p>
-<p><strong>What is the National Map?</strong></p>
-<p>The National Map is a web based application developed by the <a href="http://nicta.com.au">National ICT Australia</a> as part of an initiative of Department of Communications. It is developed on top of existing open source software <a href="http://cesiumjs.org/">Cesium</a> and <a href="http://leafletjs.com/">Leaflet</a> with <a href="http://get.webgl.org/">WebGL</a> and Canvas support. </p>
-<p>It is designed to:</p>
+
+<header class="header"><img src="NM_logo.png" width="416" height="46" alt="NICTA National Map"/><br>
+<a href="http://nationalmap.research.nicta.com.au/"><br>
+Go directly to the National Map</a></header>
+
+<section class="information"><strong>What is the National Map?</strong><br>
+    <br>
+  The National Map is a web based application developed by the <a href="http://nicta.com.au">National ICT Australia</a> as part of an initiative of Department of Communications. It is developed on top of existing open source software <a href="http://cesiumjs.org/">Cesium</a> and <a href="http://leafletjs.com/">Leaflet</a> with <a href="http://get.webgl.org/">WebGL</a> and Canvas support.  
+  <p>It is designed to:</p>
 <ul>
-  <li>Provide easy access to authoritative and other spatial data to government, business and public</li>
-  <li>Facilitate the opening of data by federal, state and local government bodies</li>
-  <li>Provide an open framework of geospatial data services that supports commercial and community innovation </li>
+  <li>
+    <p>Provide easy access to authoritative and other spatial data to government, business and public</p>
+  </li>
+  <li>
+    <p>Facilitate the opening of data by federal, state and local government bodies</p>
+  </li>
+  <li>
+    <p>Provide an open framework of geospatial data services that supports commercial and community innovation </p>
+  </li>
 </ul>
 <p>It is still very much proof of concept application with revisions and releases occuring daily while we refine it.</p>
 <p>Current data services are:</p>
 <ul>
-  <li>All now available from their custodian and in National Map</li>
-  <li>Land (Geoscience Australia)</li>
-  <li>Gravity, land cover, magnetic image, surface geology, hillshade </li>
-  <li>Water (Bureau of Meteorology’s Geofabric)</li>
-  <li>Water bodies, streams and rivers, catchments, estuaries, boreholes, waterholes, river regions, drainage divisions, aquifer contours, water table aquifers</li>
-  <li>Infrastructure (Geoscience Australia’s Geotopo 250k)</li>
-  <li>Roads, railroads, airports, ferry routes, pipelines, power lines </li>
-  <li>Boundaries (Australian Bureau of Statistics)</li>
-  <li>States and territories, local government areas, postal areas, commonwealth electoral divisions, state electoral divisions, state suburbs, natural resource management regions, Australian drainage divisions, tourism regions, statistical boundaries</li>
-  <li>Population (Geoscience Australia)</li>
-  <li>Cities</li>
-  <li>Populated places</li>
-  <li>Other data sets and services via <a href="http://data.gov.au">data.gov.au</a></li>
+  <li>
+    <p>All now available from their custodian and in National Map</p>
+  </li>
+  <li>
+    <p>Land (Geoscience Australia)</p>
+  </li>
+  <li>
+    <p>Gravity, land cover, magnetic image, surface geology, hillshade </p>
+  </li>
+  <li>
+    <p>Water (Bureau of Meteorology’s Geofabric)</p>
+  </li>
+  <li>
+    <p>Water bodies, streams and rivers, catchments, estuaries, boreholes, waterholes, river regions, drainage divisions, aquifer contours, water table aquifers</p>
+  </li>
+  <li>
+    <p>Infrastructure (Geoscience Australia’s Geotopo 250k)</p>
+  </li>
+  <li>
+    <p>Roads, railroads, airports, ferry routes, pipelines, power lines </p>
+  </li>
+  <li>
+    <p>Boundaries (Australian Bureau of Statistics)</p>
+  </li>
+  <li>
+    <p>States and territories, local government areas, postal areas, commonwealth electoral divisions, state electoral divisions, state suburbs, natural resource management regions, Australian drainage divisions, tourism regions, statistical boundaries</p>
+  </li>
+  <li>
+    <p>Population (Geoscience Australia)</p>
+  </li>
+  <li>
+    <p>Cities</p>
+  </li>
+  <li>
+    <p>Populated places</p>
+  </li>
+  <li>
+    <p>Other data sets and services via <a href="http://data.gov.au">data.gov.au</a></p>
+  </li>
 </ul>
 <p>More coming!</p>
-<p><em>[Launch call to action here]</em></p>
+<p><a href="http://nationalmap.research.nicta.com.au/">Launch the National Map</a></p>
 <p><strong>How to use the National Map?</strong><br>
 </p>
 <p>Use NM to see and get available data sets and services</p>
 <ul>
-  <li>[instructions here]</li>
+  <li>
+    <p>[instructions here]</p>
+  </li>
 </ul>
 <p>Create own data services (eg WMS data services using other NM data services) for use with NM</p>
 <ul>
-  <li>[instructions here]</li>
+  <li>
+    <p>[instructions here]</p>
+  </li>
 </ul>
 <p>Create own data services collection file that points to your data services</p>
 <ul>
-  <li>[instructions here]</li>
+  <li>
+    <p>[instructions here]</p>
+  </li>
 </ul>
 <p>Contribute to the National Map code base (bug fixes, features) [link here]</p>
 <ul>
-  <li>[instructions here]</li>
+  <li>
+    <p>[instructions here]</p>
+  </li>
 </ul>
 <p>Build a value-add back-end service for NM</p>
 <ul>
-  <li>[instructions here]</li>
+  <li>
+    <p>[instructions here]</p>
+  </li>
 </ul>
 <p>&nbsp;</p>
 <p>Build a value-add front-end service (no coding needed)</p>
 <ul>
-  <li>[instructions here]</li>
+  <li>
+    <p>[instructions here]</p>
+  </li>
 </ul>
 <p>&nbsp;</p>
 <p>Write your own code that uses the NM data services</p>
 <ul>
-  <li>[instructions here]</li>
+  <li>
+    <p>[instructions here]</p>
+  </li>
 </ul>
 <p>&nbsp;</p>
 <p>Fork the code and make your own version</p>
 <ul>
-  <li>[instructions here]</li>
+  <li>
+    <p>[instructions here]</p>
+  </li>
 </ul>
 <p>&nbsp;</p>
-<p><em>[Launch call to action here]</em></p>
-<p>&nbsp;</p>
-<p><em>[Nicta footer]</em></p>
+<p><a href="http://nationalmap.research.nicta.com.au/">Launch the National Map</a></p>
+  
+</section>
+
+
+
+
+  <section class="footer">
+    <p>© National ICT Australia Limited (NICTA) 2014. All Rights Reserved.</p>
+    <p><a href="http://www.nicta.com.au/terms__and__conditions">Terms and Conditions</a>   <a href="http://www.nicta.com.au/privacy">Privacy</a></p>
+  </section>
+</p>
 </body>
 </html>
