--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,21 @@
     <link rel="stylesheet" href="viewer/AusGlobeViewer.css">
 
     <script src="cesium/Build/Cesium/Cesium.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      if (window.location.host.indexOf('localhost') === 0) {
+        ga('create', 'UA-52604226-2', 'none');
+      } else {
+        ga('create', 'UA-52604226-1', 'auto');
+      }
+      ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
