--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,18 @@
     <meta name="copyright" content="Copyright(c) 2012-2013 National ICT Australia Limited (NICTA).  All rights reserved.">
     <title>National Map</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <!-- jQuery -->
-    <script src="./third_party/jquery-1.8.3.min.js"></script>
-    <link rel="stylesheet" href="./third_party/jquery-ui-1.9.2.custom/css/smoothness/jquery-ui-1.9.2.custom.min.css" />
-    <script src="./third_party/jquery-ui-1.9.2.custom/js/jquery-ui-1.9.2.custom.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css"/>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"' type="text/css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
+    
+    <!-- Third Party -->
     <script type="text/javascript" src="./third_party/jquery.csv-0.71.min.js"></script>
     <script type="text/javascript" src="./third_party/jquery.xml2json.js"></script>
+    <script type="text/javascript" src="./third_party/jquery.browser.min.js"></script>
 
-    <!-- Third Party -->
     <script src="./third_party/URI.js"></script>
     <script src="./third_party/proj4.js"></script>
     <script src="./third_party/proj4_epsg.js"></script>
