Test infrastructure and build overhaul, round 938.

--- a/public/specs/SpecRunner.html
+++ b/public/specs/SpecRunner.html
@@ -1,58 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
 <head>
-  <title>Jasmine Spec Runner</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Jasmine Spec Runner v2.0.1</title>
 
-  <link rel="shortcut icon" type="image/png" href="../third_party/jasmine-1.3.1/jasmine_favicon.png">
-  <link rel="stylesheet" type="text/css" href="../third_party/jasmine-1.3.1/jasmine.css">
-  <script type="text/javascript" src="../third_party/jasmine-1.3.1/jasmine.js"></script>
-  <script type="text/javascript" src="../third_party/jasmine-1.3.1/jasmine-html.js"></script>
+  <link rel="shortcut icon" type="image/png" href="../third_party/jasmine-2.0.1/jasmine_favicon.png">
+  <link rel="stylesheet" type="text/css" href="../third_party/jasmine-2.0.1/jasmine.css">
 
-  <!-- include source files here... -->
-  <script type="text/javascript" src="samples/src/Player.js"></script>
-  <script type="text/javascript" src="samples/src/Song.js"></script>
-  
-  <script type="text/javascript" src="../cesium/Cesium/Cesium.js"></script>
-  <script type="text/javascript" src="../ausglobe.js"></script>
-  <script type="text/javascript" src="../vis_layers.js"></script>
-  <script type="text/javascript" src="../viewer/AusGlobeViewer.js"></script>
+  <script type="text/javascript" src="../third_party/jasmine-2.0.1/jasmine.js"></script>
+  <script type="text/javascript" src="../third_party/jasmine-2.0.1/jasmine-html.js"></script>
+  <script type="text/javascript" src="../third_party/jasmine-2.0.1/boot.js"></script>
 
-  <!-- include spec files here... -->
-  <script type="text/javascript" src="samples/spec/SpecHelper.js"></script>
-  <script type="text/javascript" src="samples/spec/PlayerSpec.js"></script>
-  
-  <script type="text/javascript" src="datasetSpec.js"></script>
-
-  <script type="text/javascript">
-    (function() {
-      var jasmineEnv = jasmine.getEnv();
-      jasmineEnv.updateInterval = 1000;
-
-      var htmlReporter = new jasmine.HtmlReporter();
-
-      jasmineEnv.addReporter(htmlReporter);
-
-      jasmineEnv.specFilter = function(spec) {
-        return htmlReporter.specFilter(spec);
-      };
-
-      var currentWindowOnload = window.onload;
-
-      window.onload = function() {
-        if (currentWindowOnload) {
-          currentWindowOnload();
-        }
-        execJasmine();
-      };
-
-      function execJasmine() {
-        jasmineEnv.execute();
-      }
-
-    })();
-  </script>
-
+  <script type="text/javascript" src="../build/ausglobe-specs.js"></script>
 </head>
 
 <body>
