added leaflet support

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <script src="./third_party/proj4.js"></script>
     <script src="./third_party/proj4_epsg.js"></script>
     <script src="./third_party/togeojson.js"></script>
-    
+     
     <!-- Leaflet Plugins -->
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />   
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
@@ -29,6 +29,7 @@
     <script src="./third_party/bing.js"></script>
     <script src="./third_party/esri-leaflet.js"></script>
     <script src="./third_party/html2canvas.js"></script>
+    <script src="./third_party/TileLayer.Filter.min.js"></script>
 
     <link rel="stylesheet" href="build/Cesium/Widgets/widgets.css" media="screen">
     <link rel="stylesheet" href="css/AusGlobeViewer.css">
