move to current Bing.js

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- Leaflet -->
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />   
     <script src="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
-    <script src="./third_party/bing.js"></script>
+    <script src="./third_party/Bing.js"></script>
     <script src="./third_party/esri-leaflet.js"></script>
     <script src="./third_party/html2canvas.js"></script>
     <script src="./third_party/TileLayer.Filter.min.js"></script>
