--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <script src="./third_party/URI.js"></script>
      
     <!-- Leaflet -->
+    <script>L_PREFER_CANVAS = true;</script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />   
     <script src="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
     <script src="./third_party/Bing.js"></script>
