--- a/public/SpecRunner.html
+++ b/public/SpecRunner.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="./third_party/jasmine-2.0.1/jasmine-html.js"></script>
     <script type="text/javascript" src="./third_party/jasmine-2.0.1/boot.js"></script>
 
+    <script src="./third_party/URI.js"></script>
+
     <script type="text/javascript" src="./build/ausglobe-specs.js"></script>
 </head>
 
