--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="description" content="National Map">
     <meta name="copyright" content="Copyright(c) 2012-2014 National ICT Australia Limited (NICTA).  All rights reserved.">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
     <link rel="manifest" href="manifest.json">
+
 
     <title>National Map</title>
 
