Displace map instead of overlaying it.

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 
 <body>
 
-    <div id="cesiumContainer" class="full-window"></div>
+    <div id="cesiumContainer" class="full-window map-displaced"></div>
     <div id="ui" class="full-window transparent-to-input"></div>
     <div id="loadingIndicator" class="loadingIndicator"></div>
 
