--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="./third_party/jquery.xml2json.js"></script>
 
     <!-- Utility -->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:300italic,400,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400,300' rel='stylesheet' type='text/css'>
     <script src="//cdnjs.cloudflare.com/ajax/libs/proj4js/2.2.2/proj4.js"></script>
     <script src="./third_party/proj4_epsg.js"></script>
