Minor doc tweaks.

--- a/public/help/NowViewingTab.html
+++ b/public/help/NowViewingTab.html
@@ -90,7 +90,7 @@
       </section>
       
       <section class="footer">
-        <p>© National ICT Australia Limited (NICTA) 2014. All Rights Reserved.</p>
+        <p>&copy; National ICT Australia Limited (NICTA) 2014. All Rights Reserved.</p>
         <p><a href="http://www.nicta.com.au/terms__and__conditions">Terms and Conditions</a> | <a href="http://www.nicta.com.au/privacy">Privacy</a></p>
       </section>
 
