--- a/public/help/TableOfContents.html
+++ b/public/help/TableOfContents.html
@@ -20,12 +20,12 @@
             <br><expl>The map legend and tuning the display</expl></h2>
       <h2><a target="_parent" href="SearchTab.html">Search Tab</a>
             <br><expl>Finding places and Data Sets</expl></h2>
-      <h2><a target="_parent" href="Howto.html">How to...</a></h2>
-         <h3><a target="_parent" href="Howto.html#GetStartedWithTheNationalMap">Get started with the National Map</a></h3>
-         <h3><a target="_parent" href="Howto.html#FindOutAboutADisplayedFeature">Find out about a displayed feature</a></h3>
-         <h3><a target="_parent" href="Howto.html#DisplayMyOwnSpatialData">Display my own spatial data</a></h3>
-         <h3><a target="_parent" href="Howto.html#ShareMyNationalMapViewWithOthers">Share my National Map view with others</a></h3>
-         <h3><a target="_parent" href="Howto.html#ContributeDataSetsToNationalMap">Contribute Data Sets to National Map</a></h3>
+      <h2><a target="_parent" href="HowTo.html">How to...</a></h2>
+         <h3><a target="_parent" href="HowTo.html#GetStartedWithTheNationalMap">Get started with the National Map</a></h3>
+         <h3><a target="_parent" href="HowTo.html#FindOutAboutADisplayedFeature">Find out about a displayed feature</a></h3>
+         <h3><a target="_parent" href="HowTo.html#DisplayMyOwnSpatialData">Display my own spatial data</a></h3>
+         <h3><a target="_parent" href="HowTo.html#ShareMyNationalMapViewWithOthers">Share my National Map view with others</a></h3>
+         <h3><a target="_parent" href="HowTo.html#ContributeDataSetsToNationalMap">Contribute Data Sets to National Map</a></h3>
       <h2><a target="_parent" href="FrequentlyAskedQuestions.html">Frequently Asked Questions</a></h2>
          <h3><a target="_parent" href="FrequentlyAskedQuestions.html#FAQsaboutNationalMapOperation">FAQs about National Map Operation</a></h3>
          <h3><a target="_parent" href="FrequentlyAskedQuestions.html#FAQsabouttheNationalMapsystemanddata">FAQs about the National Map system and data</a></h3>
