Get the tests working.

--- a/public/SpecRunner.html
+++ b/public/SpecRunner.html
@@ -17,7 +17,7 @@
 
     <script src="./third_party/URI.js"></script>
 
-    <script type="text/javascript" src="./build/ausglobe-specs.js"></script>
+    <script type="text/javascript" src="./build/TerriaJS-specs.js"></script>
 </head>
 
 <body>
