--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,7 +25,7 @@
     <!-- Leaflet -->
     <script>L_PREFER_CANVAS = true;</script>
 
-    <link rel="stylesheet" href="build/main.css">
+    <link rel="stylesheet" href="build/nationalmap.css">
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -49,6 +49,6 @@
     <div id="ui" class="full-window transparent-to-input"></div>
     <div id="loadingIndicator" class="loadingIndicator"></div>
 
-    <script src="build/ausglobe.js"></script>
+    <script src="build/nationalmap.js"></script>
 </body>
 </html>
