--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,14 +10,9 @@
 
     <link rel="manifest" href="manifest.json">
 
-
     <title>National Map</title>
 
-    <!-- jQuery -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
-    <script type="text/javascript" src="./third_party/jquery.csv-0.71.min.js"></script>
-
-    <!-- Utility -->
+    <!-- Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:300italic,400,300' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300italic,400,300' rel='stylesheet' type='text/css'>
 
