Upgrade to Jasmine 2.3.0.

--- a/wwwroot/SpecRunner.html
+++ b/wwwroot/SpecRunner.html
@@ -1,21 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Jasmine Spec Runner v2.0.1</title>
+    <meta charset="UTF-8">
+    <title>Jasmine Spec Runner v2.3.0</title>
 
-    <link rel="shortcut icon" type="image/png" href="./third_party/jasmine-2.0.1/jasmine_favicon.png">
-    <link rel="stylesheet" type="text/css" href="./third_party/jasmine-2.0.1/jasmine.css">
+    <link rel="shortcut icon" type="image/png" href="./third_party/jasmine-2.3.0/jasmine_favicon.png">
+    <link rel="stylesheet" type="text/css" href="./third_party/jasmine-2.3.0/jasmine.css">
 
-    <script>
-        CESIUM_BASE_URL = './cesium/Build/Cesium';
-    </script>
-
-    <script type="text/javascript" src="./third_party/jasmine-2.0.1/jasmine.js"></script>
-    <script type="text/javascript" src="./third_party/jasmine-2.0.1/jasmine-html.js"></script>
-    <script type="text/javascript" src="./third_party/jasmine-2.0.1/boot.js"></script>
-
-    <script src="./third_party/URI.js"></script>
+    <script type="text/javascript" src="./third_party/jasmine-2.3.0/jasmine.js"></script>
+    <script type="text/javascript" src="./third_party/jasmine-2.3.0/jasmine-html.js"></script>
+    <script type="text/javascript" src="./third_party/jasmine-2.3.0/boot.js"></script>
 
     <script type="text/javascript" src="./build/TerriaJS-specs.js"></script>
 </head>
